<resources>
    <string name="app_name">Hellokitty♥</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home_btn_signin">로그인 원할 시 클릭하세요♡</string>
    <string name="fragment_home_btn_signup">회원가입 원할 시 클릭하세요♡</string>
    <string name="fragment_signin_id">아이디를 입력하세요♡</string>
    <string name="fragment_signin_passwd">비밀번호를 입력하세요♡</string>
    <string name="fragment_signin_btn">♡로그인하기♡</string>
    <string name="fragment_signup_id">로그인 시 사용할 아이디를 입력하세요♡</string>
    <string name="fragment_signup_passwd">로그인 시 사용할 비밀번호를 입력하세요♡</string>
    <string name="fragment_signup_btn">♡회원가입하기♡</string>
    <string name="menu1">♡정보♡</string>
    <string name="menu2">♡쇼핑몰♡</string>
    <string name="menu3">♡타이머♡</string>
    <string name="name">이름: 헬로키티</string>


</resources>
