<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hellokittyface"
    tools:context=".ui.SigninFragment"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725">

        <EditText
            android:id="@+id/edit_signin_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/fragment_signin_id"
            android:textAlignment="center"
            android:textColor="#FFB6C1" />

        <EditText
            android:id="@+id/edit_signin_passwd"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/fragment_signin_passwd"
            android:textAlignment="center"
            android:textColor="#FFB6C1"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/fragment_signin_btn"
            android:layout_width="181dp"
            android:layout_height="48dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/fragment_signin_btn"
            android:textAlignment="center"
            android:textColor="#FF5675"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>